fix (ZNTA-2189) align Cancel buttons on Glossary modals correctly by removing unnecessary overriding css, check that removal of css does not affect other components

--- a/server/zanata-frontend/src/frontend/app/containers/ProjectVersion/index.css
+++ b/server/zanata-frontend/src/frontend/app/containers/ProjectVersion/index.css
@@ -312,10 +312,6 @@ li.list-group-item.to .item .tmx-icon {
   margin-bottom: 0.75rem;
 }
 
-.btn-link {
-  line-height: inherit;
-}
-
 /* React Toggle Component CSS */
 
 .react-toggle {
